# household_dataplatform

./: .gitignore  CLAUDE.md  README.md  flake.nix  justfile  pyproject.toml  requirements.txt
dashboard-front/.streamlit.example/: secrets.toml
dashboard-front/app/: dashboard.py  main.py
dashboard-front/src/: fetch_csv.py
depot-server/: wrangler.toml
depot-server/src/: index.js
