[project]
name = "household-dataplatform"
version = "0.1.0"
description = "Local-first household data platform with DuckDB and Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.4.0",
  "httpx>=0.28.1",
  "polars>=1.34.0",
  "requests>=2.32.0",
  "streamlit>=1.50.0",
  "streamlit-authenticator>=0.4.0",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.13.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
